# MCNameSeeker

./: .gitmodules  CMakeLists.txt  README.md  cool names
NameSeeker/: CMakeLists.txt
NameSeeker/src/: Viewer.cpp  Viewer.h  main.cpp
dependecies/lib/: libcurl.dylib
source/: main.cpp
source/rcg/: Checker.cpp  Checker.h
